# rewards-proof

./: .gitmodules  Cargo.toml  README.md
.github/: CODEOWNERS
rewards-proof/: Cargo.toml
rewards-proof/benches/: proofs_benchmark.rs
rewards-proof/examples/: example_proofs.rs
rewards-proof/src/: api.rs
rewards-verification-onchain/: .pnp.cjs  Anchor.toml
rewards-verification-onchain/programs/rewards-verification-onchain/: Cargo.toml
rewards-verification-onchain/programs/rewards-verification-onchain/src/: lib.rs
rewards-verification-onchain/programs/rewards-verification-onchain/tests/: rewards-verification-test.rs
rewards-verification-onchain/tests/: rewards-verification-onchain.ts
